welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: not found: value biscuits
while ( 2 * biscuits != caseOrange + 1) {
            ^RunHalf:8: error: value update is not a member of Boolean
	if (estSurBiscuit()= true) {
            ^RunHalf:11: error: value update is not a member of Boolean
	if (estSurOrange()= true ){
            ^